RESOLVED FIXED311270
[libpas] pas_report_crash_extract_pgm_failure should use the supplied task id when invoking the reader callback
https://bugs.webkit.org/show_bug.cgi?id=311270
Summary [libpas] pas_report_crash_extract_pgm_failure should use the supplied task id...
Dan Hecht
Reported 2026-04-01 09:35:37 PDT
...
Attachments
Dan Hecht
Comment 1 2026-04-01 09:35:38 PDT
Dan Hecht
Comment 2 2026-04-01 09:38:05 PDT
EWS
Comment 3 2026-04-02 16:06:28 PDT
Committed 310473@main (f7b2175c9c23): <https://commits.webkit.org/310473@main> Reviewed commits have been landed. Closing PR #61835 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.