[libpas] pas_report_crash_extract_pgm_failure should use the supplied task id when invoking the reader callback https://bugs.webkit.org/show_bug.cgi?id=311270 rdar://173765415

Reviewed by Marcus Plutowski.

ReportCrash supplies a task id to use when calling back. The libpas
code should use that when invoking the callbacks.

Added test to PGMTests.cpp to verify the supplied task is used.

* Source/bmalloc/libpas/libpas.xcodeproj/project.pbxproj:
* Source/bmalloc/libpas/src/libpas/pas_report_crash.c:
(pas_enumerator_reader_adapter):
(pas_report_crash_extract_pgm_failure):
(setup_enumerator_for_crash_reporting): Deleted.
* Source/bmalloc/libpas/src/test/PGMTests.cpp:
(std::mockCrashReporterReader):
(std::testPGMCrashReportTaskPassthrough):
(addPGMTests):

Canonical link: https://commits.webkit.org/310473@main